fix: update font size for intro on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ p.intro {
   p.intro {
     order: 2;
     margin-top: 2rem;
+    font-size: 2.5rem;
   }
 }
 
